--- a/index.html
+++ b/index.html
@@ -459,7 +459,9 @@
                     }
                 }
             </script>
-            
+            <div style="background-color: #ffcccc; color: #990000; text-align: center; padding: 10px; font-family: Arial, sans-serif; font-size: 18px; border-bottom: 2px solid #990000;">
+    <strong>This site is unstable. Please use the main one.</strong>
+</div>
         <center>
             <div id="flashContainer">
                 <img id="blurredBackground" alt="Blurred Background" style="display: none;">
