--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
         <body onload="checkPassword()">
             <script>
                 function checkPassword() {
-                    const correctPassword = "IceCreamSandwich";
+                    const correctPassword = "gingerbread";
                     let userInput = prompt("Warning! This site has been locked to administrators and beta testers, you will need a password to open it.");
                     
                     if (userInput !== correctPassword) {
